# miryoku_zmk

.github/workflows/: build-corne-custom-display.yml
config/: corne.conf
config/boards/shields/custom_display/: CMakeLists.txt  Kconfig.defconfig  common.h  custom_display.conf  custom_display.overlay  custom_display.zmk.yml  display_config.h  display_init.c  display_init.h
config/boards/shields/custom_display/assets/: font_montserrat_bold_20.c  font_montserrat_regular_12.c  icon_bluetooth.c  icon_charge.c  icon_usb.c  maha_logo.c  miryoku_logo.c
config/boards/shields/custom_display/events/: event_battery.c  event_battery.h  event_layer.c  event_layer.h  event_signal.c  event_signal.h  event_wpm.c  event_wpm.h
config/boards/shields/custom_display/screens/: screen_layouts.c  screen_layouts.h
config/boards/shields/custom_display/simulator/: CMakeLists.txt  README.md  build.sh  lv_conf.h  main.c  setup.sh
config/boards/shields/custom_display/widgets/: widget_battery.c  widget_battery.h  widget_layer_indicator.c  widget_layer_indicator.h  widget_maha_logo.c  widget_maha_logo.h  widget_miryoku_logo.c  widget_miryoku_logo.h  widget_signal.c  widget_signal.h  widget_wpm.c  widget_wpm.h
config/shields/custom_display/: Kconfig.shield
miryoku/: custom_config.h
